# Fuchsia-SDK

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  OWNERS  README.md  download-cipd.sh  test.sh
cipd/: BUILD.gn
scripts/: build.sh  common.sh  download-build-tools.sh  setup-and-test.sh  update-fuchsia-sdk.sh
src/bouncing_ball/: BUILD.gn  main.cc
src/bouncing_ball/meta/: bouncing_ball.cmx
src/calculator/: BUILD.gn
src/calculator/cli/: BUILD.gn  client.cc  client.h  main.cc
src/calculator/cli/meta/: cli.cmx
src/calculator/engine/: BUILD.gn  engine.cc  engine.h  engine_driver.cc  engine_driver.h  main.cc
src/calculator/engine/meta/: engine.cmx
src/calculator/engine/test/: BUILD.gn  engine_device_unit_test.cc  engine_host_unit_test.cc
src/calculator/fidl/: BUILD.gn  calculator.fidl
src/hello_world/: BUILD.gn  hello.cc  hello_shared.cc  hello_shared.h  hello_static.cc  hello_static.h  hello_world.cmx
src/hello_world/test/: hello_test.cc
src/rot13/: BUILD.gn
src/rot13/client/: BUILD.gn  rot13_client.cc  rot13_client_app.cc  rot13_client_app.h
src/rot13/client/meta/: rot13_client.cmx
src/rot13/fidl/: BUILD.gn  rot13.fidl
src/rot13/server/: BUILD.gn  rot13.cc  rot13.h  rot13_server.cc  rot13_server_app.cc  rot13_server_app.h  rot13_server_unittests.cc  rot13_unittests.cc
src/rot13/server/meta/: rot13_server.cmx  rot13_server_unittests.cmx
tests/: build-all-sdk-targets.sh  ci-cq.sh  far.sh  run-device-image-tests.sh  run-far-tests.sh  run-host-tests.sh
