# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("calculator") {
  data_deps = [
    "//src/calculator/engine",
  ]
  if (is_fuchsia) {
    data_deps += [ "//src/calculator/fidl" ]
  }
}

group("tests") {
  testonly = true
  data_deps = [
    "//src/calculator/engine:tests",
  ]
}
