# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/fuchsia-sdk/build/config/component.gni")
import("//third_party/fuchsia-sdk/build/config/package.gni")

executable("rot13_client_bin") {
  sources = [
    "rot13_client.cc",
    "rot13_client_app.cc",
    "rot13_client_app.h",
  ]

  deps = [
    "//src/rot13/fidl:fuchsia.examples.rot13",
    "//third_party/fuchsia-sdk/sdk:async_loop_cpp",
    "//third_party/fuchsia-sdk/sdk:async_loop_default",
    "//third_party/fuchsia-sdk/sdk:sys_cpp",
  ]
}

fuchsia_component("client") {
  manifest = "meta/rot13_client.cmx"
  data_deps = [
    ":rot13_client_bin",
  ]
}

fuchsia_package("rot13_client") {
  deps = [
    ":client",
  ]
}
