# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/fuchsia-sdk/build/fidl_library.gni")

fidl_library("fuchsia.examples.rot13") {
  sources = [
    "rot13.fidl",
  ]
}
